--- a/GawayzAdmin/WebAdmin/Views/Questions/Edit.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Questions/Edit.cshtml
@@ -1,7 +1,22 @@
-﻿
+﻿@model WebAdmin.ViewModels.QuestionsViewModel
+@using System.Web.Script.Serialization
+
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Sales Order";
 }
 
-<h2>Edit</h2>
+@{ string data = new JavaScriptSerializer().Serialize(Model);}
 
+@section scripts{
+    <script src="~/Scripts/knockout-3.4.0.js"></script>
+    <script src="~/Scripts/knockout.mapping-latest.js"></script>
+    <script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery-validate.bootstrap-tooltip.js"></script>
+    <script src="~/Scripts/QuestionViewModel.js"></script>
+    <script type="text/javascript">
+        var QuestionViewModel = new QuestionViewModel(@Html.Raw(data));
+        ko.applyBindings(QuestionViewModel);
+    </script>
+}
+
+@Html.Partial("_EditSalesOrder")
