--- a/GawayzAdmin/WebAdmin/Views/Questions/Create.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Questions/Create.cshtml
@@ -7,6 +7,7 @@
 @{ string data = new JavaScriptSerializer().Serialize(Model);}
 
 @section scripts{
+    <script src="~/Scripts/jquery-3.1.1.min.js"></script>
     <script src="~/Scripts/knockout-3.4.0.js"></script>
     <script src="~/Scripts/knockout.mapping-latest.js"></script>
     <script src="~/Scripts/jquery.validate.js"></script>
@@ -15,6 +16,14 @@
     <script type="text/javascript">
         var QuestionViewModel = new QuestionViewModel(@Html.Raw(data));
         ko.applyBindings(QuestionViewModel);
+    </script>
+    <script>
+        
+        var $checks = $('input[type="checkbox"]');
+        $checks.click(function () {
+          
+            $checks.not(this).prop("checked", false);
+        });
     </script>
 }
 @{ Html.RenderPartial("_CreateOrEdit");}
