--- a/GawayzAdmin/WebAdmin/Views/Questions/Delete.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Questions/Delete.cshtml
@@ -21,6 +21,6 @@
     </script>
 }
 
-@Html.Partial("_DisplaySalesOrder")
+@Html.Partial("_DisplayQuestion")
 
 <p><button class="btn btn-danger" data-bind="click: save">Delete</button></p>
