--- a/GawayzAdmin/WebAdmin/Content/Site.css
+++ b/GawayzAdmin/WebAdmin/Content/Site.css
@@ -22,3 +22,40 @@ select,
 textarea {
     max-width: 280px;
 }
+/* styles for validation helpers */
+.field-validation-error {
+    color: #b94a48;
+}
+
+.field-validation-valid {
+    display: none;
+}
+
+input.input-validation-error {
+    border: 1px solid #b94a48;
+}
+
+input[type="checkbox"].input-validation-error {
+    border: 0 none;
+}
+
+.validation-summary-errors {
+    color: #b94a48;
+}
+
+.validation-summary-valid {
+    display: none;
+}
+
+
+.tooltip-inner {
+    background-color: #d9534f;
+}
+
+.top.tooltip .tooltip-arrow {
+    border-top-color: #d43f3a;
+}
+
+.right.tooltip .tooltip-arrow {
+    border-right-color: #d43f3a;
+}
