--- a/GawayzAdmin/WebAdmin/Views/Product/_ProductList.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Product/_ProductList.cshtml
@@ -1,13 +1,10 @@
-﻿@{
-    Layout = null;
-}
-@using PagedList
+﻿@using PagedList
 @using PagedList.Mvc
 @model IEnumerable<DataAccess.Entities.Questions>
 <div id="companyTable">
     <div class="content-box-large">
         <div class="panel-heading">
-            <div class="panel-title"><h2>Companies</h2></div>
+            <div class="panel-title"><h2>Products</h2></div>
         </div>
         <div class="panel-body">
             <div class="table-responsive">
@@ -15,10 +12,10 @@
                 <table class="table">
                     <tr>
                         <th>
-                            <strong> Company Name</strong>
+                            <strong> Product Name</strong>
                         </th>
                         <th>
-                            <strong> Company Profile</strong>
+                            <strong>Product Description</strong>
                         </th>
                         <th>
                             <strong>Active</strong>
@@ -26,14 +23,14 @@
                         <th>Action</th>
                     </tr>
 
-                    @foreach (var item in ViewBag.OnePageOfcompany)
+                    @foreach (var item in ViewBag.OnePageOfProducts)
                     {
                         <tr>
                             <td>
-                                @item.CompanyName
+                                @item.ProductName
                             </td>
                             <td>
-                                @item.CompanyProfile
+                                @item.enProductDescription
                             </td>
                             <td>
                                 @if (item.Active == true)
@@ -48,18 +45,28 @@
                                 }
                             </td>
                             <td>
-                                @Html.ActionLink("Edit", "Edit", new { id = @item.CompanyID }, new { @class = "btn btn-warning btn-xs", data_modal = "" }) |
-                               
+                                @Html.ActionLink("Edit", "Edit", new { id = @item.ProductID, companyId= ViewBag.companyId }, new { @class = "btn btn-warning btn-xs", data_modal = "" }) |
+
+                                <div class="btn-group">
+                                    <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Action <span class="caret"></span>
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li>@Html.ActionLink("Questions", "Index", "Questions", new { productId = @item.ProductID }, null)</li>
+                                        <li>@Html.ActionLink("Brand Awareness", "Index", "Questions", new { productId = @item.ProductID }, null)</li>
+                                        <li>@Html.ActionLink("Survey", "Index", "Survey", new { productId = @item.ProductID }, null)</li>
+                                      
+                                    </ul>
+                                </div>
+
                               
-                             
-                                @Html.ActionLink("procuts", "Index", "Product", new { companyId = @item.CompanyID }, new { @class = "btn btn-primary btn-xs" })
-                               
+
                             </td>
                         </tr>
                     }
 
                 </table>
-                @Html.PagedListPager((IPagedList)ViewBag.OnePageOfcompany, page => Url.Action("CompanyList", new { page }), PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions() { HttpMethod = "GET", UpdateTargetId = "questionTable" }))
+                @Html.PagedListPager((IPagedList)ViewBag.OnePageOfProducts, page => Url.Action("ProductList", new { page }), PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions() { HttpMethod = "GET", UpdateTargetId = "questionTable" }))
             </div>
         </div>
     </div>
@@ -103,7 +110,7 @@
                             message: 'Your data added Successfuly',
                         },{
                             type: "success",
-                          
+
                             placement: {
                                 from: "bottom ",
                                 align: "right"
