--- a/GawayzAdmin/WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Shared/_Layout.cshtml
@@ -5,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
-    @RenderSection("scripts", required: false)
+
     <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
 <body>
@@ -47,7 +43,7 @@
                 <div class="sidebar content-box" style="display: block;">
                     <ul class="nav">
                         <!-- Main menu -->
-                        <li class="current"><a href="index.html"><i class="glyphicon glyphicon-home"></i>Companies</a></li>
+                        <li class="current"><a href="@Url.Action("Index","Company")"><i class="glyphicon glyphicon-home"></i>Companies</a></li>
                         <li><a href="calendar.html"><i class="glyphicon glyphicon-user"></i> USers</a></li>
                     </ul>
                 </div>
@@ -59,7 +55,11 @@
     </div>
 
    
-    
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    @RenderSection("scripts", required: false)
 
 
 </body>
