--- a/GawayzAdmin/WebAdmin/Views/Shared/_Layout.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Shared/_Layout.cshtml
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+
+    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/Scripts/jquery.validate.min.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
     <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
@@ -55,12 +62,9 @@
     </div>
 
    
-    @Scripts.Render("~/bundles/modernizr")
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
+    @Scripts.Render("~/bundles/knockout")
+
+    <script src="~/Scripts/QuestionViewModel.js"></script>
     @RenderSection("scripts", required: false)
-
-
 </body>
 </html>
