--- a/GawayzAdmin/WebAdmin/Views/Shared/_CreateOrEdit.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Shared/_CreateOrEdit.cshtml
@@ -1,7 +1,7 @@
 ﻿<p id="MessageToClient" data-bind="text: MessageToClient"></p>
 
 <form>
-
+    <input type="hidden" name="ProductId" data-bind="value: ProductId"  />
     <div class="row">
         <div class="col-lg-6">
 
