Finished Basec CRUD For Questions and Choices

--- a/GawayzAdmin/WebAdmin/Views/Questions/_QuestionsList.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Questions/_QuestionsList.cshtml
@@ -37,7 +37,7 @@
                     }
 
                 </table>
-                @Html.PagedListPager((IPagedList)ViewBag.OnePageOfQuestion, page => Url.Action("QuestionsList", new { page }), PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions() { HttpMethod = "GET", UpdateTargetId = "questionTable" }))
+                @Html.PagedListPager((IPagedList)ViewBag.OnePageOfQuestion, page => Url.Action("QuestionsList", new { page, productId= ViewBag.ProductId }), PagedListRenderOptions.EnableUnobtrusiveAjaxReplacing(new AjaxOptions() { HttpMethod = "GET", UpdateTargetId = "questionTable" }))
             </div>
         </div>
     </div>
