--- a/GawayzAdmin/WebAdmin/Views/Company/_CompanyList.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Company/_CompanyList.cshtml
@@ -7,7 +7,7 @@
 <div id="companyTable">
     <div class="content-box-large">
         <div class="panel-heading">
-            <div class="panel-title"><h2>Companies</h2></div>
+            <div class="panel-title"><h2>Sponsors</h2></div>
         </div>
         <div class="panel-body">
             <div class="table-responsive">
@@ -15,7 +15,7 @@
                 <table class="table">
                     <tr>
                         <th>
-                            <strong> Company Name</strong>
+                            <strong> Sponsor Name</strong>
                         </th>
                         <th>
                             <strong> Company Profile</strong>
