--- a/GawayzAdmin/WebAdmin/Views/Shared/_CreateOrEdit.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Shared/_CreateOrEdit.cshtml
@@ -1,7 +1,8 @@
 ﻿<p id="MessageToClient" data-bind="text: MessageToClient"></p>
 
 <form>
-    <input type="hidden" name="ProductId" data-bind="value: ProductId"  />
+    <input type="hidden" name="ProductId" data-bind="value: ProductId"/>
+    <input type="hidden" name="QuestionId" data-bind="value: QuestionId" />
     <div class="row">
         <div class="col-lg-6">
 
@@ -40,7 +41,7 @@
     </table>
 
     <p>
-        <a class="btn btn-default btn-sm" href="/">&laquo; Back to List</a>
+        <a class="btn btn-default btn-sm" data-bind="attr: { 'href': '/Questions?productId=' + ProductId() }">&laquo; Back to List</a>
     </p>
 
     <p>
