--- a/GawayzAdmin/WebAdmin/Views/Product/_ProductList.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Product/_ProductList.cshtml
@@ -52,8 +52,8 @@
                                         Action <span class="caret"></span>
                                     </button>
                                     <ul class="dropdown-menu">
-                                        <li>@Html.ActionLink("Questions", "Index", "Questions", new { productId = @item.ProductID }, null)</li>
-                                        <li>@Html.ActionLink("Brand Awareness", "Index", "Questions", new { productId = @item.ProductID }, null)</li>
+                                        <li>@Html.ActionLink("Questions", "Index", "Questions", new { productId = @item.ProductID, questionTypeId = 2 }, null)</li>
+                                        <li>@Html.ActionLink("Brand Awareness", "Index", "Questions", new { productId = @item.ProductID, questionTypeId=1 }, null)</li>
                                         <li>@Html.ActionLink("Survey", "Index", "Survey", new { productId = @item.ProductID }, null)</li>
                                       
                                     </ul>
