--- a/GawayzAdmin/WebAdmin/Views/Questions/Index.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Questions/Index.cshtml
@@ -4,6 +4,6 @@
 }
 
 <p>
-    @Html.ActionLink("Create New", "Create",new { productId =(int)ViewBag.productId }, new { @class = "btn btn-success" })
+    @Html.ActionLink("Create New", "Create",new { productId =(int)ViewBag.productId, questionTypeId=(int)ViewBag.QuestionTypeId }, new { @class = "btn btn-success" })
 </p>
-@{Html.RenderAction("QuestionsList", new { productId = (int)ViewBag.productId });}
+@{Html.RenderAction("QuestionsList", new { productId = (int)ViewBag.productId, questionTypeId = (int)ViewBag.QuestionTypeId });}
