--- a/GawayzAdmin/WebAdmin/Views/Shared/_DisplayQuestion.cshtml
+++ b/GawayzAdmin/WebAdmin/Views/Shared/_DisplayQuestion.cshtml
@@ -1,7 +1,8 @@
 ﻿<div>
     <div class="row">
         <div class="col-lg-6">
-           
+            <input type="hidden" name="QuestionTypeId" data-bind="value: QuestionTypeId"/>
+            <input type="hidden" name="QuestionId" data-bind="value: QuestionId" />
             <label class="control-label" for="QuestionText">Question Text:</label>
             <span class="form-control" data-bind="text: QuestionText"></span>
         </div>
@@ -33,4 +34,4 @@
 
 </div>
 
-<p><a class="btn btn-default btn-sm" data-bind="attr: { 'href': '/Questions?productId=' + ProductId() }">&laquo; Back to List</a></p>
+<p><a class="btn btn-default btn-sm" data-bind="attr: { 'href': '/Questions?productId=' + ProductId() + '&questionTypeId='+QuestionTypeId()}">&laquo; Back to List</a></p>
