Finished BussinessRoles and Pin Code

--- a/GawayzAdmin/GawayzAdmin/Views/Product/_ProductList.cshtml
+++ b/GawayzAdmin/GawayzAdmin/Views/Product/_ProductList.cshtml
@@ -55,7 +55,7 @@
                                         <li>@Html.ActionLink("Questions", "Index", "Questions", new { productId = @item.ProductID, questionTypeId = 2 }, null)</li>
                                         <li>@Html.ActionLink("Brand Awareness", "Index", "Questions", new { productId = @item.ProductID, questionTypeId=1 }, null)</li>
                                         <li>@Html.ActionLink("Survey", "Index", "Survey", new { productId = @item.ProductID }, null)</li>
-                                      
+                                        <li>@Html.ActionLink("Pin Code", "Index", "Code", new { productId = @item.ProductID }, null)</li>
                                     </ul>
                                 </div>
 
