--- a/GawayzAdmin/GawayzAdmin/Views/Product/_CreateOrEdit.cshtml
+++ b/GawayzAdmin/GawayzAdmin/Views/Product/_CreateOrEdit.cshtml
@@ -54,5 +54,16 @@
                 </div>
             </div>
         </div>
+        <div class="form-group">
+            <label for="ProductSurveyQPerPage" class="col-sm-4 control-label">Business Role</label>
+            <div class="col-sm-8">
+              @Html.ListBox("BusinessOrder", (MultiSelectList)ViewBag.BusinessRoles)
+            </div>
+        </div>
     </div>
 </div>
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('#BusinessOrder').multiselect();
+    });
+</script>
