--- a/GawayzAdmin/GawayzAdmin/Views/Shared/_Layout.cshtml
+++ b/GawayzAdmin/GawayzAdmin/Views/Shared/_Layout.cshtml
@@ -8,11 +8,11 @@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-
+    <script src="~/Scripts/bootstrap-multiselect.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-
+    <link href="~/Content/bootstrap-multiselect.css" rel="stylesheet" />
     <link href="~/Content/Site.css" rel="stylesheet" />
 </head>
 <body>
