--- a/GawayzAdmin/GawayzAdmin/Views/Shared/_Layout.cshtml
+++ b/GawayzAdmin/GawayzAdmin/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     <script src="~/Scripts/bootstrap-multiselect.js"></script>
+    <script src="~/Scripts/bootstrap-filestyle.min.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
@@ -59,6 +60,7 @@
                     <!-- Main menu -->
                     <li class="current"><a href="@Url.Action("Index", "Company")"><i class="glyphicon glyphicon-home"></i>Companies</a></li>
                     <li><a href="@Url.Action("Index", "Users")"><i class="glyphicon glyphicon-user"></i> Users</a></li>
+                    <li><a href="@Url.Action("Index", "Ads")"><i class="glyphicon glyphicon-eye-open"></i> Ads</a></li>
                 </ul>
             </div>
         </div>
