--- a/GawayzAdmin/GawayzAdmin/Views/Shared/_DisplayQuestion.cshtml
+++ b/GawayzAdmin/GawayzAdmin/Views/Shared/_DisplayQuestion.cshtml
@@ -26,7 +26,7 @@
                 <td class="form-group"><span class="form-control input-sm" data-bind="text: ChoiceText"></span></td>
                 <td class="form-group"><span class="form-control input-sm" data-bind="text: ChoiceLetter"></span></td>
                 <td class="text-center">
-                    <input readonly="readonly" disabled="disabled" type="checkbox"  data-bind="hecked:IsSelected"/>
+                <input readonly="readonly" disabled="disabled" type="checkbox"  data-bind="checked:IsSelected"/>
                 </td>
             </tr>
         </tbody>
